<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- activit_main中使用的字符串 -->
    <string name="phone">电话</string>
    <string name="sms">信息</string>

    <!-- activit_phone中使用的字符串 -->
    <string name="app_name">CallItself</string>
    <string name="hello_world">Hello world!</string>
    <string name="call">call</string>
    <string name="hangup">hang up</string>
    <string name="callNumber">拨打的次数：</string>
    <string name="callTime">拨打的间隔时间：</string>
    <string name="phoneNumber">电话号码</string>
    <string name="second">秒</string>
    <string name="time">次</string>

    <!-- activit_phone中使用的字符串 -->
    <string name="new_message">新信息</string>
    <string name="recipients">收件人</string>
    <string name="contacts">联系人</string>
    <string name="context">内容</string>

</resources>