<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/contactLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/recipients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="27dp"
            android:text="@string/recipients"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/addContact"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/addcontact" />

        <EditText
            android:id="@+id/contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/addContact"
            android:layout_toRightOf="@id/recipients"
            android:hint="@string/contacts"
            android:textSize="18sp" />
    </RelativeLayout>

    <include
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/contactLayout"
        layout="@layout/line" />

    <RelativeLayout
        android:id="@+id/contextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:minHeight="45dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/send"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/send" />

        <EditText
            android:id="@+id/context"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/send"
            android:hint="@string/context"
            android:maxHeight="80dp"
            android:singleLine="false"
            android:textSize="18sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/contextLayout"
        android:layout_below="@id/contactLayout" >
    </ListView>

</RelativeLayout>